feat(back-end): new stock db and back-office improvements